[package]
name = "bitvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bincode = "1.2.1"
bit-vec = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
get-size = { version = "^0.1", features = ["derive"] }